# sqlite3.49.0

./: .gitignore  CMakeLists.txt
